Project evolution (4rd review)

--- a/Ordem Servico.html
+++ b/Ordem Servico.html
@@ -35,7 +35,7 @@ Ordem Servico
 <A NAME="field_summary"><!-- --></A>
 <TABLE BORDER="0" WIDTH="100%" CELLPADDING="3" CELLSPACING="0" SUMMARY="">
 <TR BGCOLOR="#D9D9D9">
-<TH ALIGN="left" COLSPAN="2"><FONT SIZE="+2" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);">
+<TH ALIGN="left" COLSPAN="2"><FONT SIZE="+2" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);">
 <B>Resumo do Campo</B></FONT></TH>
 </TR>
 <TR BGCOLOR="white" CLASS="TableRowColor">
@@ -79,7 +79,7 @@ Ordem Servico
 <A NAME="field_detail"><!-- --></A>
 <TABLE BORDER="0" WIDTH="100%" CELLPADDING="3" CELLSPACING="0" SUMMARY="">
 <TR BGCOLOR="#D9D9D9">
-<TH ALIGN="left" COLSPAN="1"><FONT SIZE="+2" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);">
+<TH ALIGN="left" COLSPAN="1"><FONT SIZE="+2" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);">
 <B>Detalhes do Campo</B></FONT></TH>
 </TR>
 </TABLE>
