--- a/uml-Medicao.html
+++ b/uml-Medicao.html
@@ -24,6 +24,8 @@ Medicao</title></head><body bgcolor=#ffffff text=#000000vlink=#330000 alink=#330
 -<a href=Medicao.html#dataEntrega>dataEntrega</a> :<a href=uml-datetime.html>datetime</a><br>
 -<a href=Medicao.html#urlEntrega>urlEntrega</a> :char<br>
 -<a href=Medicao.html#dataAceite>dataAceite</a> :<a href=uml-datetime.html>datetime</a><br>
+-<a href=Medicao.html#ordemServicoConstrucaoID>ordemServicoConstrucaoID</a> :int<br>
+-<a href=Medicao.html#urlDocumentacaoOriginal>urlDocumentacaoOriginal</a> :char<br>
 </td></tr><tr><td>
 +<a href=Medicao.html#registrarEntregas()>registrarEntregas</a>() :<a href=uml-RegistroEntrega.html>RegistroEntrega</a><br>
 +<a href=Medicao.html#registrarAceite()>registrarAceite</a>() :<a href=uml-AceiteEntrega.html>AceiteEntrega</a><br>
