--- a/overview-summary.html
+++ b/overview-summary.html
@@ -16,7 +16,7 @@ Overview
 
 <TABLE BORDER="0" WIDTH="100%" CELLPADDING="3" CELLSPACING="0" SUMMARY="">
 <TR BGCOLOR="#D9D9D9">
-<TH ALIGN="left" COLSPAN="2"><FONT SIZE="+2" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);">
+<TH ALIGN="left" COLSPAN="2"><FONT SIZE="+2" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);" style="font-family: &quot;Segoe UI&quot;,&quot;sans-serif&quot;; color: rgb(102, 102, 102);">
 <B>Packages</B></FONT></TH>
 </TR>
 </TABLE>
